# pyfoobar

./: .gitignore  AUTHORS  ChangeLog  README.md  TODO.md  requirements.txt  setup.cfg
doc/: conf.py  contents.rst  pyfoobar.rst  use_sphix.rst
doc/source/: algo.md  community.md  conf.py  contents.rst  devtool.rst  devtools.md  doc.md  docstyle.rst  fp.md  index.rst  io.rst  lang-asyncio.md  lang.md  libs-frm.md  libs-gui.md  libs-math.md  libs-net-scrapy.md  libs.md  package.md  pip.rst  plugin.md  pyfoobar.rst  storage.md  todo.rst
examples/: inprocess.py  test_fixtures.py  use_fixture.py  use_gevent.py  use_jupyter.py  use_linter.py  use_matplotlib.py  use_mpld3.py  use_pysnopper.py  use_setup.py  use_sphinx.py  use_sys.py
examples/algo/: memoization.py  use_defaultdict.py
examples/algorithm/: __init__.py  use_bisect.py
examples/db/: use_apsw.py  use_neo4j.py
examples/frm/: concur.py  rxpy.py  rxqt.py
examples/lang/: api.py  async.py  cls.py  datetime.py  decorator.py  fun.py  import.py  pizza.py  slots.py  util.py
examples/libs/: use_aioproc.py  use_fut.py  use_gevent.py
examples/libs/qt/: iconsole.py  inprocess.py  matplotlib.py  uxasyncio.py
examples/nlp/ltp/: install.md  use_pyltp.py
examples/plugin/: Base.py
examples/profile/: use_cprofile.py
examples/stdlib/: np.py
notebook/: inspect.ipynb  use_mpld3.ipynb  编码风格.ipynb
pyfoobar/: cli.py  storage.py
pyfoobar/tests/: test_cli.py
test_doc/source/: conf.py  index.rst
tools/: conda.md  pip.md  style.md  virtualenv.md  vscode.md  vscode_launch.json  wheel.md
