[metadata]
name = pyfoobar
author = ChenZhihui
author-email = 13717910964@163.com
summary = foobar package
license = MIT
description-file = 
    README.rst

home-page = http://pyfoobar.readthedocs.io/
requires-python = >=3.7
classifier =
    Development Status :: 4 - Beta

[files]
packages = 
    pyfoobar